--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,12 +12,13 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v2.1.2
 
-      - uses: actions/cache@v4
+      - name: Cache node_modules
+        uses: actions/cache@v4
         env:
           cache-name: cache-node-modules
         with:
           path: node_modules
-          key: ${{ hashFiles('package.json') }}
+          key: ${{ hashFiles('package-lock.json') }}
 
       - name: Build webpack package
         run: |
