--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,8 +9,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4  
+
       - name: Setup Node
         uses: actions/setup-node@v2.1.2
+
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ hashFiles('package-lock.json') }}
 
       - name: Build webpack package
         run: |
